--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><title>Blabber</title><link href=/js/about.a609a9bd.js rel=prefetch><link href=/css/app.5a6b584d.css rel=preload as=style><link href=/js/app.abf47036.js rel=preload as=script><link href=/js/chunk-vendors.5e9d70fa.js rel=preload as=script><link href=/css/app.5a6b584d.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/img/icons/favicon-16x16.png><link rel=manifest href=/manifest.json><meta name=theme-color content=#4DBA87><meta name=apple-mobile-web-app-capable content=no><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content=client><link rel=apple-touch-icon href=/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/img/icons/safari-pinned-tab.svg color=#4DBA87><meta name=msapplication-TileImage content=/img/icons/msapplication-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><noscript><strong>We're sorry but Blabber doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.5e9d70fa.js></script><script src=/js/app.abf47036.js></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=manifest href=/site.webmanifest><link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5><meta name=msapplication-TileColor content=#000000><meta name=theme-color content=#ffffff><title>Blabber &ndash; Anonymous chatting</title><link href=/css/404.e489d85f.css rel=prefetch><link href=/css/about.dc8c01dc.css rel=prefetch><link href=/css/chat.71d154d5.css rel=prefetch><link href=/css/join.c36039d0.css rel=prefetch><link href=/css/privacy.e7f98a5a.css rel=prefetch><link href=/css/support.07eff305.css rel=prefetch><link href=/css/terms.2ad70b27.css rel=prefetch><link href=/js/404.6b99c555.js rel=prefetch><link href=/js/about.ac7516b6.js rel=prefetch><link href=/js/chat.0eece355.js rel=prefetch><link href=/js/join.3e61d253.js rel=prefetch><link href=/js/privacy.5319ab3b.js rel=prefetch><link href=/js/support.c0a24934.js rel=prefetch><link href=/js/terms.2207122c.js rel=prefetch><link href=/css/app.7a2c63e8.css rel=preload as=style><link href=/js/app.54e688c4.js rel=preload as=script><link href=/js/chunk-vendors.9c8e0e85.js rel=preload as=script><link href=/css/app.7a2c63e8.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/img/icons/favicon-16x16.png><link rel=manifest href=/manifest.json><meta name=theme-color content=#4DBA87><meta name=apple-mobile-web-app-capable content=no><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content=client><link rel=apple-touch-icon href=/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/img/icons/safari-pinned-tab.svg color=#4DBA87><meta name=msapplication-TileImage content=/img/icons/msapplication-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><noscript><strong>We're sorry but Blabber doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>var copyToClipboard = function(button, string) {
+        var element = document.createElement('textarea');
+        element.value = string;
+        element.setAttribute('readonly', '');
+        element.style.position = 'absolute';
+        element.style.left = '-9999px';
+        document.body.appendChild(element);
+
+        var selected = document.getSelection().rangeCount > 0 ?
+                       document.getSelection().getRangeAt(0) : false;
+
+        element.select();
+
+        document.execCommand('copy');
+        document.body.removeChild(element);
+
+        if (selected) {
+          document.getSelection().removeAllRanges();
+          document.getSelection().addRange(selected);
+        }
+
+        button.parentElement.classList.add('success');
+        button.innerHTML = 'Copied';
+
+        setTimeout(function() {
+          button.parentElement.classList.remove('success');
+          button.innerHTML = 'Copy';
+        }, 2000);
+      }</script><script src=/js/chunk-vendors.9c8e0e85.js></script><script src=/js/app.54e688c4.js></script></body></html>
